[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
name = "bunnybot"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
clap = "2.20.0"
error-chain = "0.10.0"
lazy_static = "0.2.2"
rand = "0.3.16"
regex = "0.2.1"
reqwest = "0.7.0"
serde = "0.8.6"
serde_derive = "0.8.6"
serde_json = "0.8.6"

[target]

[target."cfg(target_os=\"linux\")"]

[target."cfg(target_os=\"linux\")".dependencies]
scheduler = "0.1.3"
