[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
name = "bunnybot"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.0"
error-chain = "0.12.1"
lazy_static = "1.0.0"
rand = "0.7.2"
regex = "1.3.1"
reqwest = "0.9.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
structopt = "0.3.2"

[target]

[target."cfg(target_os=\"linux\")"]

[target."cfg(target_os=\"linux\")".dependencies]
scheduler = "0.1.3"
